--- a/html/account.html
+++ b/html/account.html
@@ -542,7 +542,7 @@
                                     <input type="checkbox" name="toggle" id="toggle" class="toggle-checkbox absolute block w-6 h-6 rounded-full bg-white border-4 appearance-none cursor-pointer"/>
                                     <label for="toggle" class="toggle-label block overflow-hidden h-6 rounded-full bg-gray-300 cursor-pointer"></label>
                                 </div>
-                                <label for="toggle" class="text-sm text-gray-700">Creator?</label>
+                                <label for="toggle" class="text-md text-gray-700">Creator?</label>
                                 </div>             
                               <div class="mt-8 md:flex items-center">
                                   <div class="flex flex-col">
