unsaved changes on write page

--- a/html/write.html
+++ b/html/write.html
@@ -34,7 +34,7 @@
  
    </div>
  
-   <template id="my-template">
+   <!-- <template id="my-template">
     <swal-title>
       Save changes to "Untitled 1" before closing?
     </swal-title>
@@ -52,7 +52,7 @@
     <swal-param
       name="customClass"
       value='{ "popup": "my-popup" }' />
-    </template>
+    </template> -->
 
 
 
@@ -61,7 +61,7 @@
   <script defer src="https://cdn.jsdelivr.net/npm/@editorjs/editorjs@latest"></script>
   <script defer src="https://cdn.jsdelivr.net/npm/@editorjs/header@latest"></script>
   <script defer src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script defer src="/js/init.js"></script>
+  <script defer src="/js/init.js" type="module"></script>
   <script defer src="/js/write.js" type="module"></script>
 </body>
 </html>
