--- a/html/account.html
+++ b/html/account.html
@@ -16,8 +16,6 @@
     rel="stylesheet">
   <link href="/css/output.css" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js" defer></script>
-  <script src="./assets/js/charts-lines.js" defer></script>
-  <script src="./assets/js/charts-pie.js" defer></script>
 </head>
 
 <body class="">
@@ -492,10 +490,6 @@
                     <div class="xl:w-full border-b border-gray-300 dark:border-gray-700 py-5 bg-white dark:bg-gray-800">
                         <div class="flex w-11/12 mx-auto xl:w-full xl:mx-0 items-center ">
                             <h1 tabindex="0" role="heading" aria-label="profile information" class="focus:outline-none text-3xl font-bold text-gray-800 ">Profile info</h1> 
-                            <div class="ml-2 cursor-pointer text-gray-600 dark:text-gray-400">
-                                <img class="dark:hidden" src="https://tuk-cdn.s3.amazonaws.com/can-uploader/simple_form-svg4.svg" alt="info">
-                                <img class="dark:block hidden" src="https://tuk-cdn.s3.amazonaws.com/can-uploader/simple_form-svg4dark.svg" alt="info">
-                            </div>
                         </div>
                     </div>
                     <div class="mx-auto">
@@ -547,33 +541,37 @@
                               <div class="mt-8 md:flex items-center">
                                   <div class="flex flex-col">
                                       <label class="mb-3 text-sm leading-none text-gray-800">First name</label>
-                                      <input type="name" tabindex="0" aria-label="Enter first name" class="focus:outline-none focus:ring-2 focus:ring-indigo-400 w-64 bg-gray-100 text-sm font-medium leading-none text-gray-800 p-3 border rounded border-gray-200" value="William" />
+                                      <input id="fName" type="name" tabindex="0" aria-label="Enter first name" class="focus:outline-none focus:ring-2 focus:ring-indigo-400 w-64 bg-gray-100 text-sm font-medium leading-none text-gray-800 p-3 border rounded border-gray-200" value="William" />
                                   </div>
                                   <div class="flex flex-col md:ml-12 md:mt-0 mt-8">
                                       <label class="mb-3 text-sm leading-none text-gray-800">Last name</label>
-                                      <input type="name" tabindex="0" aria-label="Enter last name" class="focus:outline-none focus:ring-2 focus:ring-indigo-400 w-64 bg-gray-100 text-sm font-medium leading-none text-gray-800 p-3 border rounded border-gray-200" value="Smith" />
+                                      <input id="lName" type="name" tabindex="0" aria-label="Enter last name" class="focus:outline-none focus:ring-2 focus:ring-indigo-400 w-64 bg-gray-100 text-sm font-medium leading-none text-gray-800 p-3 border rounded border-gray-200" value="Smith" />
                                   </div>
                               </div>
                               <div class="mt-12 md:flex items-center">
                                   <div class="flex flex-col">
                                       <label class="mb-3 text-sm leading-none text-gray-800">Email Address</label>
-                                      <input type="email" tabindex="0" aria-label="Enter email Address" class="focus:outline-none focus:ring-2 focus:ring-indigo-400 w-64 bg-gray-100 text-sm font-medium leading-none text-gray-800 p-3 border rounded border-gray-200" value="smith.william@gmail.com" />
+                                      <input readonly id="email" type="email" tabindex="0" aria-label="Enter email Address" class="focus:outline-none focus:ring-2 focus:ring-indigo-400 w-64 bg-gray-100 text-sm font-medium leading-none text-gray-800 p-3 border rounded border-gray-200" value="smith.william@gmail.com" />
                                   </div>
                                   <div class="flex flex-col md:ml-12 md:mt-0 mt-8">
                                       <label class="mb-3 text-sm leading-none text-gray-800">Username</label>
-                                      <input type="name" tabindex="0" aria-label="Enter last name" class="focus:outline-none focus:ring-2 focus:ring-indigo-400 w-64 bg-gray-100 text-sm font-medium leading-none text-gray-800 p-3 border rounded border-gray-200" value="MaxTGM" />
+                                      <input readonly id="username" type="name" tabindex="0" aria-label="Enter last name" class="focus:outline-none focus:ring-2 focus:ring-indigo-400 w-64 bg-gray-100 text-sm font-medium leading-none text-gray-800 p-3 border rounded border-gray-200" value="MaxTGM" />
                                   </div>
                               </div>
                               <div class="mt-12 md:flex items-center">
                                   <div class="flex flex-col">
                                       <label class="mb-3 text-sm leading-none text-gray-800">Date of birth</label>
-                                      <input type="" tabindex="0" aria-label="Enter date of birth" class="focus:outline-none focus:ring-2 focus:ring-indigo-400 w-64 bg-gray-100 text-sm font-medium leading-none text-gray-800 p-3 border rounded border-gray-200" value="28.03.1997" />
+                                      <input id="dob" type="date" tabindex="0" aria-label="Enter date of birth" class="focus:outline-none focus:ring-2 focus:ring-indigo-400 w-64 bg-gray-100 text-sm font-medium leading-none text-gray-800 p-3 border rounded border-gray-200" value="28.03.1997" />
                                   </div>
                                   <div class="flex flex-col md:ml-12 md:mt-0 mt-8">
                                       <label class="mb-3 text-sm leading-none text-gray-800">Phone number</label>
-                                      <input type="number" tabindex="0" aria-label="Enter phone number" class="focus:outline-none focus:ring-2 focus:ring-indigo-400 w-64 bg-gray-100 text-sm font-medium leading-none text-gray-800 p-3 border rounded border-gray-200" value="+81 839274" />
+                                      <input id="pNumber" type="number" tabindex="0" aria-label="Enter phone number" class="focus:outline-none focus:ring-2 focus:ring-indigo-400 w-64 bg-gray-100 text-sm font-medium leading-none text-gray-800 p-3 border rounded border-gray-200" value="+81 839274" />
                                   </div>
                               </div>
+                              <div class="mt-12 md:flex items-center">
+                                <label class="mb-3 text-sm leading-none text-gray-800">Description</label>
+                                <textarea id="description" placeholder="About yourself..." cols="30" rows="10"></textarea>
+                            </div>
                               <div class="mt-5 max-w-full bg-white dark:bg-gray-800 dark:border-gray-700">
                                 <h5 class="mb-3 text-base font-semibold text-gray-900 lg:text-xl dark:text-white">
                                 Connect Socials
@@ -624,7 +622,7 @@
                                       <p id="agree" tabindex="0" class="focus:outline-none text-sm leading-none ml-2">I agree with the <span class="text-indigo-700">terms of service</span></p>
                                   </div>
                               </div>
-                              <button role="button" class="flex items-center mb-5 justify-center py-4 px-7 focus:outline-none bg-white border rounded border-gray-400 md:mt-2 hover:bg-gray-100  focus:ring-2 focus:ring-offset-2 focus:ring-gray-700">
+                              <button onclick="saveDetails()" role="button" class="flex items-center mb-5 justify-center py-4 px-7 focus:outline-none bg-white border rounded border-gray-400 md:mt-2 hover:bg-gray-100  focus:ring-2 focus:ring-offset-2 focus:ring-gray-700">
                                   <span class="text-sm font-medium text-center text-gray-800 capitalize">Save</span>
                                  <img class="mt-1 ml-3" src="https://tuk-cdn.s3.amazonaws.com/can-uploader/form_layout-svg2.svg" alt="arrow">
                               </button>
