--- a/html/readNovel.html
+++ b/html/readNovel.html
@@ -111,10 +111,10 @@
 
 		<!--Author-->
 		<div class="flex w-full items-center font-sans px-4 py-2">
-			<img class="w-10 h-10 rounded-full mr-4" src="http://i.pravatar.cc/300" alt="Avatar of Author">
+			<img id="creatorPfp" class="w-10 h-10 rounded-full mr-4" alt="Avatar of Author">
 			<div class="flex-1 px-2">
-				<p class="text-base font-bold md:text-xl leading-none mb-2">BY KAIZEN JAIN</p>
-				<p class="text-gray-600 text-xs md:text-base">description of author <a class="text-green-500 no-underline hover:underline" href="">his profile</a></p>
+				<p id="creatorUsername" class="text-base font-bold md:text-xl leading-none mb-2"></p>
+				<p id="creatorDescription" class="text-gray-600 text-xs md:text-base"></p>
 			</div>
 			<div class="justify-end">
 				<button class="bg-transparent border border-gray-500 hover:border-green-500 text-xs text-gray-500 hover:text-green-500 font-bold py-2 px-4 rounded-full">Follow</button>
@@ -295,7 +295,7 @@
 	<script defer src="https://cdn.jsdelivr.net/npm/@editorjs/editorjs@latest"></script>
 	<script defer src="https://cdn.jsdelivr.net/npm/@editorjs/header@latest"></script>
 	<script defer src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-	<script defer src="/js/init.js"></script>
+	<script defer src="/js/init.js" type="module"></script>
 	<script defer src="/js/readNovel.js" type="module"></script>
 
 </body>
