--- a/html/account.html
+++ b/html/account.html
@@ -540,31 +540,31 @@
                               <div class="mt-8 md:flex items-center">
                                   <div class="flex flex-col">
                                       <label class="mb-3 text-sm leading-none text-gray-800">First name</label>
-                                      <input id="fName" type="name" tabindex="0" aria-label="Enter first name" class="focus:outline-none focus:ring-2 focus:ring-indigo-400 w-64 bg-gray-100 text-sm font-medium leading-none text-gray-800 p-3 border rounded border-gray-200" value="William" />
+                                      <input id="fName" type="name" tabindex="0" aria-label="Enter first name" class="focus:outline-none focus:ring-2 focus:ring-indigo-400 w-64 bg-gray-100 text-sm font-medium leading-none text-gray-800 p-3 border rounded border-gray-200"/>
                                   </div>
                                   <div class="flex flex-col md:ml-12 md:mt-0 mt-8">
                                       <label class="mb-3 text-sm leading-none text-gray-800">Last name</label>
-                                      <input id="lName" type="name" tabindex="0" aria-label="Enter last name" class="focus:outline-none focus:ring-2 focus:ring-indigo-400 w-64 bg-gray-100 text-sm font-medium leading-none text-gray-800 p-3 border rounded border-gray-200" value="Smith" />
+                                      <input id="lName" type="name" tabindex="0" aria-label="Enter last name" class="focus:outline-none focus:ring-2 focus:ring-indigo-400 w-64 bg-gray-100 text-sm font-medium leading-none text-gray-800 p-3 border rounded border-gray-200"/>
                                   </div>
                               </div>
                               <div class="mt-12 md:flex items-center">
                                   <div class="flex flex-col">
                                       <label class="mb-3 text-sm leading-none text-gray-800">Email Address</label>
-                                      <input readonly id="email" type="email" tabindex="0" aria-label="Enter email Address" class="focus:outline-none focus:ring-2 focus:ring-indigo-400 w-64 bg-gray-100 text-sm font-medium leading-none text-gray-800 p-3 border rounded border-gray-200" value="smith.william@gmail.com" />
+                                      <input readonly id="email" type="email" tabindex="0" aria-label="Enter email Address" class="focus:outline-none focus:ring-2 focus:ring-indigo-400 w-64 bg-gray-100 text-sm font-medium leading-none text-gray-800 p-3 border rounded border-gray-200"  />
                                   </div>
                                   <div class="flex flex-col md:ml-12 md:mt-0 mt-8">
                                       <label class="mb-3 text-sm leading-none text-gray-800">Username</label>
-                                      <input readonly id="username" type="name" tabindex="0" aria-label="Enter last name" class="focus:outline-none focus:ring-2 focus:ring-indigo-400 w-64 bg-gray-100 text-sm font-medium leading-none text-gray-800 p-3 border rounded border-gray-200" value="MaxTGM" />
+                                      <input readonly id="username" type="name" tabindex="0" aria-label="Enter last name" class="focus:outline-none focus:ring-2 focus:ring-indigo-400 w-64 bg-gray-100 text-sm font-medium leading-none text-gray-800 p-3 border rounded border-gray-200"  />
                                   </div>
                               </div>
                               <div class="mt-12 md:flex items-center">
                                   <div class="flex flex-col">
                                       <label class="mb-3 text-sm leading-none text-gray-800">Date of birth</label>
-                                      <input id="dob" type="date" tabindex="0" aria-label="Enter date of birth" class="focus:outline-none focus:ring-2 focus:ring-indigo-400 w-64 bg-gray-100 text-sm font-medium leading-none text-gray-800 p-3 border rounded border-gray-200" value="28.03.1997" />
+                                      <input id="dob" type="date" tabindex="0" aria-label="Enter date of birth" class="focus:outline-none focus:ring-2 focus:ring-indigo-400 w-64 bg-gray-100 text-sm font-medium leading-none text-gray-800 p-3 border rounded border-gray-200"  />
                                   </div>
                                   <div class="flex flex-col md:ml-12 md:mt-0 mt-8">
                                       <label class="mb-3 text-sm leading-none text-gray-800">Phone number</label>
-                                      <input id="pNumber" type="number" tabindex="0" aria-label="Enter phone number" class="focus:outline-none focus:ring-2 focus:ring-indigo-400 w-64 bg-gray-100 text-sm font-medium leading-none text-gray-800 p-3 border rounded border-gray-200" value="+81 839274" />
+                                      <input id="pNumber" type="number" tabindex="0" aria-label="Enter phone number" class="focus:outline-none focus:ring-2 focus:ring-indigo-400 w-64 bg-gray-100 text-sm font-medium leading-none text-gray-800 p-3 border rounded border-gray-200" />
                                   </div>
                               </div>
                               <div class="mt-12 md:flex items-center">
