--- a/html/account.html
+++ b/html/account.html
@@ -567,10 +567,18 @@
                                       <input id="pNumber" type="number" tabindex="0" aria-label="Enter phone number" class="focus:outline-none focus:ring-2 focus:ring-indigo-400 w-64 bg-gray-100 text-sm font-medium leading-none text-gray-800 p-3 border rounded border-gray-200" />
                                   </div>
                               </div>
-                              <div class="mt-12 md:flex items-center">
+                              <div>
+                                <label for="about" class=" block text-sm font-medium mt-12 text-gray-700"> Description </label>
+                                <div class="mt-1">
+                                  <textarea id="description" name="about" rows="3" class="max-w-lg shadow-sm focus:ring-indigo-500 focus:border-indigo-500 mt-1 block w-full sm:text-sm border border-gray-300 rounded-md" placeholder="About yourself..."></textarea>
+                                </div>
+                                <p class="mt-2 text-sm text-gray-500">Brief description for your profile.</p>
+                              </div>
+                  
+                              <!-- <div class="mt-12 md:flex items-center">
                                 <label class="mb-3 text-sm leading-none text-gray-800">Description</label>
-                                <textarea id="description" placeholder="About yourself..." cols="30" rows="10"></textarea>
-                            </div>
+                                <textarea  placeholder="About yourself..." cols="30" rows="10"></textarea>
+                            </div> -->
                               <div class="mt-5 max-w-full bg-white dark:bg-gray-800 dark:border-gray-700">
                                 <h5 class="mb-3 text-base font-semibold text-gray-900 lg:text-xl dark:text-white">
                                 Connect Socials
