--- a/html/readNovel.html
+++ b/html/readNovel.html
@@ -18,7 +18,7 @@
   </head>
 
   
-<body class="bg-gray-100 font-sans leading-normal tracking-normal">
+<body class="bg-gray-300 font-sans leading-normal tracking-normal">
 
 	<nav id="header" class="fixed w-full z-10 top-0">
 
@@ -77,12 +77,12 @@
 
 			<!--Title-->
 			<div class="font-sans">
-				<p class="text-base md:text-sm text-cyan-500 font-bold">&lt; <a href="#" class="text-base md:text-sm text-cyan-500 font-bold no-underline hover:underline">BACK TO HOME</a></p>
+				<p class="text-base md:text-sm text-cyan-700 font-bold">&lt; <a href="#" class="text-base md:text-sm text-cyan-700 font-bold no-underline hover:underline">BACK TO HOME</a></p>
 						<h1 id="chapTitle" class="font-bold font-sans break-normal text-gray-900 pt-6 pb-2 text-3xl md:text-4xl"></h1>
 						<p id="chapDate" class="text-sm md:text-base font-normal text-gray-600"></p>
 			</div>
 
-			<div id="editorjs" class="pt-6 m-0 p-0"></div>
+			<div id="editorjs" class="pt-6 m-0 p-0 font-sans"></div>
 			
 		</div>
 
@@ -111,10 +111,10 @@
 
 		<!--Author-->
 		<div class="flex w-full items-center font-sans px-4 py-2">
-			<img id="creatorPfp" class="w-10 h-10 rounded-full mr-4" alt="Avatar of Author">
+			<img class="w-10 h-10 rounded-full mr-4" src="http://i.pravatar.cc/300" alt="Avatar of Author">
 			<div class="flex-1 px-2">
-				<p id="creatorUsername" class="text-base font-bold md:text-xl leading-none mb-2"></p>
-				<p id="creatorDescription" class="text-gray-600 text-xs md:text-base"></p>
+				<p class="text-base font-bold md:text-xl leading-none mb-2">BY KAIZEN JAIN</p>
+				<p class="text-gray-600 text-xs md:text-base">description of author <a class="text-green-500 no-underline hover:underline" href="">his profile</a></p>
 			</div>
 			<div class="justify-end">
 				<button class="bg-transparent border border-gray-500 hover:border-green-500 text-xs text-gray-500 hover:text-green-500 font-bold py-2 px-4 rounded-full">Follow</button>
@@ -270,14 +270,14 @@
 			scrollpos = window.scrollY;
 
 			if (scrollpos > 10) {
-				header.classList.add("bg-white");
+				header.classList.add("bg-gray-200");
 				header.classList.add("shadow");
 				navcontent.classList.remove("bg-gray-100");
-				navcontent.classList.add("bg-white");
+				navcontent.classList.add("bg-gray-200");
 			} else {
 				header.classList.remove("bg-white");
 				header.classList.remove("shadow");
-				navcontent.classList.remove("bg-white");
+				navcontent.classList.remove("bg-gray-200");
 				navcontent.classList.add("bg-gray-100");
 
 			}
@@ -295,7 +295,7 @@
 	<script defer src="https://cdn.jsdelivr.net/npm/@editorjs/editorjs@latest"></script>
 	<script defer src="https://cdn.jsdelivr.net/npm/@editorjs/header@latest"></script>
 	<script defer src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-	<script defer src="/js/init.js" type="module"></script>
+	<script defer src="/js/init.js"></script>
 	<script defer src="/js/readNovel.js" type="module"></script>
 
 </body>
