alert and css of connection

--- a/html/home.html
+++ b/html/home.html
@@ -92,6 +92,7 @@
 			<img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fstatic.vecteezy.com%2Fsystem%2Fresources%2Fpreviews%2F000%2F694%2F092%2Foriginal%2Fwrite-your-own-story-hand-lettering-typography-modern-poster-design-vector.jpg&f=1&nofb=1" class="md:max-w-xl row-start-1 max-w-sm mx-auto pr-4 my-auto mt-8" alt="">
         </div>
 </body>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </html>
 
 <!-- bg-clip-text bg-gradient-to-l from-blue-600 to-cyan-600 text-transparent font-bold -->
