--- a/html/series.html
+++ b/html/series.html
@@ -402,9 +402,11 @@
             </header>
             <main class="h-full overflow-y-auto">
                 <div class="container px-6 mx-auto grid">
-                    <h2 class="my-4 text-2xl font-semibold text-gray-700 dark:text-gray-200">
+                    <h2 class="mt-4 text-2xl font-semibold text-gray-700 dark:text-gray-200">
                         Series
                     </h2>
+                    <p tabindex="0" class=" focus:outline-none text-sm font-light leading-tight text-gray-600 mt-4">To make a new series go to <a href="/dashboard/home" class="underline text-cyan-700">dashboard</a> </p> 
+
                 </div>
                 <section>
                     <div class="max-w-screen-xl px-4 py-8 mx-auto">
