--- a/html/readNovel.html
+++ b/html/readNovel.html
@@ -82,7 +82,7 @@
 						<p id="chapDate" class="text-sm md:text-base font-normal text-gray-600"></p>
 			</div>
 
-			<div id="editorjs" class="pt-6 m-0 p-0 font-sans"></div>
+			<div id="editorjs" class="pt-6 m-0 p-0 font-sans overflow-hidden"></div>
 			
 		</div>
 
