--- a/html/account.html
+++ b/html/account.html
@@ -601,7 +601,7 @@
                                     <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.828-1.165c-.315 0-.602.124-.812.325-.801-.573-1.9-.945-3.121-.993l.534-2.501 1.738.372a.83.83 0 1 0 .83-.869.83.83 0 0 0-.744.468l-1.938-.41a.203.203 0 0 0-.153.028.186.186 0 0 0-.086.134l-.592 2.788c-1.24.038-2.358.41-3.17.992-.21-.2-.496-.324-.81-.324a1.163 1.163 0 0 0-.478 2.224c-.02.115-.029.23-.029.353 0 1.795 2.091 3.256 4.669 3.256 2.577 0 4.668-1.451 4.668-3.256 0-.114-.01-.238-.029-.353.401-.181.688-.592.688-1.069 0-.65-.525-1.165-1.165-1.165z"/>
                                   </svg>             
                                    <span class="flex-1 ml-3 whitespace-nowrap">Reddit</span>
-                                   <span id="redditConnected" class="inline-flex items-center justify-center px-2 py-0.5 ml-3 text-xs font-medium text-gray-500 bg-gray-200 rounded dark:bg-gray-700 dark:text-gray-400">Connected</span>
+                                   <span id="redditConnected" class="inline-flex items-center justify-center px-2 py-0.5 ml-3 text-xs font-medium text-white bg-green-500 rounded dark:bg-gray-700 dark:text-gray-400">Connect</span>
                                 </a>
                                 </li>
                                 <li>
@@ -610,7 +610,7 @@
                                     <path d="M8.051 1.999h.089c.822.003 4.987.033 6.11.335a2.01 2.01 0 0 1 1.415 1.42c.101.38.172.883.22 1.402l.01.104.022.26.008.104c.065.914.073 1.77.074 1.957v.075c-.001.194-.01 1.108-.082 2.06l-.008.105-.009.104c-.05.572-.124 1.14-.235 1.558a2.007 2.007 0 0 1-1.415 1.42c-1.16.312-5.569.334-6.18.335h-.142c-.309 0-1.587-.006-2.927-.052l-.17-.006-.087-.004-.171-.007-.171-.007c-1.11-.049-2.167-.128-2.654-.26a2.007 2.007 0 0 1-1.415-1.419c-.111-.417-.185-.986-.235-1.558L.09 9.82l-.008-.104A31.4 31.4 0 0 1 0 7.68v-.123c.002-.215.01-.958.064-1.778l.007-.103.003-.052.008-.104.022-.26.01-.104c.048-.519.119-1.023.22-1.402a2.007 2.007 0 0 1 1.415-1.42c.487-.13 1.544-.21 2.654-.26l.17-.007.172-.006.086-.003.171-.007A99.788 99.788 0 0 1 7.858 2h.193zM6.4 5.209v4.818l4.157-2.408L6.4 5.209z"/>
                                   </svg>              
                                   <span class="flex-1 ml-3 whitespace-nowrap">Youtube</span>
-                                  <span id="youtubeConnected" class="inline-flex items-center justify-center px-2 py-0.5 ml-3 text-xs font-medium text-gray-500 bg-gray-200 rounded dark:bg-gray-700 dark:text-gray-400">Connected</span>
+                                  <span id="youtubeConnected" class="inline-flex items-center justify-center px-2 py-0.5 ml-3 text-xs font-medium text-white bg-green-500 rounded dark:bg-gray-700 dark:text-gray-400">Connect</span>
                                 </a>
                                 </li>
                                 <li>
@@ -620,7 +620,7 @@
                                 </div>
                                 </div>
                     
-                              <div class="mt-4">
+                              <!-- <div class="mt-4">
                                   <div class="py-4 flex items-center">
                                       <div class="bg-white dark:bg-gray-800 border rounded-sm border-gray-400 dark:border-gray-700 w-4 h-4 flex flex-shrink-0 justify-center items-center relative">
                                           <input aria-labelledby="agree"  checked type="checkbox" class="focus:outline-none focus:ring-2 focus:ring-gray-700 checkbox focus:opacity-100 opacity-0 absolute cursor-pointer w-full h-full" />
@@ -630,7 +630,7 @@
                                       </div>
                                       <p id="agree" tabindex="0" class="focus:outline-none text-sm leading-none ml-2">I agree with the <span class="text-indigo-700">terms of service</span></p>
                                   </div>
-                              </div>
+                              </div> -->
                               <button onclick="saveDetails()" role="button" class="flex items-center mb-5 justify-center py-4 px-7 focus:outline-none bg-white border rounded border-gray-400 md:mt-2 hover:bg-gray-100  focus:ring-2 focus:ring-offset-2 focus:ring-gray-700">
                                   <span class="text-sm font-medium text-center text-gray-800 capitalize">Save</span>
                                  <img class="mt-1 ml-3" src="https://tuk-cdn.s3.amazonaws.com/can-uploader/form_layout-svg2.svg" alt="arrow">
