--- a/html/account.html
+++ b/html/account.html
@@ -25,7 +25,7 @@
           <a class="ml-6 text-lg font-bold text-gray-800 dark:text-gray-200" href="/">
               Yume
           </a>
-          <ul class="mt-6">
+          <ul id="sideBarDashboard" class="mt-6">
               <li class="relative px-6 py-3">
                   <span class="absolute inset-y-0 left-0 w-1  rounded-tr-lg rounded-br-lg"
                       aria-hidden="true"></span>
@@ -42,7 +42,7 @@
               </li>
           </ul>
           <ul>
-            <li class="relative px-6 py-3">
+            <li id="sideBarSeries" class="relative px-6 py-3">
               <a class="inline-flex items-center w-full text-sm font-semibold transition-colors duration-150 hover:text-gray-800 dark:hover:text-gray-200"
               href="/dashboard/series">
               <svg class="w-5 h-5" aria-hidden="true" fill="none" stroke-linecap="round"
@@ -541,7 +541,7 @@
                                 </style>
                                 <div class="mt-4">
                                   <div class="relative inline-block w-10 mr-2 align-middle select-none transition duration-200 ease-in">
-                                    <input type="checkbox" name="toggle" id="toggle" class="toggle-checkbox absolute block w-6 h-6 rounded-full bg-white border-4 appearance-none cursor-pointer"/>
+                                    <input onclick="enableCreator()" type="checkbox" name="toggle" id="toggle" class="toggle-checkbox absolute block w-6 h-6 rounded-full bg-white border-4 appearance-none cursor-pointer"/>
                                     <label for="toggle" class="toggle-label block overflow-hidden h-6 rounded-full bg-gray-300 cursor-pointer"></label>
                                 </div>
                                 <label for="toggle" class="text-md text-gray-700">Creator?</label>
