--- a/html/account.html
+++ b/html/account.html
@@ -494,7 +494,8 @@
                     <div class="mx-auto">
                         <div class="w-full m-3 mx-auto xl:mx-0">
                             <div class="rounded relative mt-8 h-48">
-                                <img src="" alt="" class="w-full h-full object-cover rounded absolute shadow" />
+                              <!-- cover image -->
+                                <img src="" alt="" class="w-full h-full object-cover rounded absolute shadow" />   
                                 <div class="absolute bg-black opacity-50 top-0 right-0 bottom-0 left-0 rounded"></div>
                                 <div class="flex items-center px-3 py-2 rounded absolute right-0 mr-4 mt-4 cursor-pointer">
                                   <label for="files" class="relative cursor-pointer flex">
