--- a/html/about.html
+++ b/html/about.html
@@ -11,7 +11,7 @@
     <link href="/css/output.css" rel="stylesheet">
     <title>Welcome to Yume</title>
 </head>
-<body class="h-screen w-full dark:bg-black ">
+<body class="h-screen w-full bg-black dark:bg-black ">
     <!-- Navbar goes here -->
 		<nav class=" max-h-36 z-40 relative">
 			<div class="max-w-6xl mx-auto px-4">
@@ -107,7 +107,7 @@
 				});
 			</script>
 		</nav>
-		<section class="max-h-fit w-screen">
+		<section class="max-h-fit w-screen bg-black">
 			<div class="relative max-h-fit w-screen ">
 				<div class="hidden absolute z-10  md:block my-auto mx-auto h-screen">
 					<!-- <div class="grid grid-cols-4 w-full gap-4 blur-sm opacity-90 mt-2 ">
@@ -127,32 +127,32 @@
 						<div class="font-extrabold text-9xl aspect-auto text-gray-400">WRITE.READ.DRAW</div>
 					</div> -->
 					
-					<div class="grid grid-cols-4 gap-4 mt-2 w-screen blur-sm">
-						<div class="bg-yellow-100 aspect-square "></div>
-						<div class="bg-yellow-50 aspect-square "></div>
-						<div class="bg-yellow-100 aspect-square "></div>
-						<div class="bg-yellow-50 aspect-square "></div>
-						<div class="bg-yellow-50 aspect-square "></div>
-						<div class="bg-yellow-100 aspect-square "></div>
-						<div class="bg-yellow-50 aspect-square "></div>
-						<div class="bg-yellow-100 aspect-square "></div>
-						<div class="bg-yellow-100 aspect-square md:block hidden lg:hidden"></div>
-						<div class="bg-yellow-50 aspect-square md:block hidden lg:hidden"></div>
-						<div class="bg-yellow-100 aspect-square md:block hidden lg:hidden"></div>
-						<div class="bg-yellow-50 aspect-square md:block hidden lg:hidden"></div>
+					<!-- <div class="grid grid-cols-4 gap-4 mt-2 h-full w-screen blur-sm">
+						<div class="bg-red-100 "></div>
+						<div class="bg-red-50 "></div>
+						<div class="bg-red-100 "></div>
+						<div class="bg-red-50 "></div>
+						<div class="bg-red-50 "></div>
+						<div class="bg-red-100 "></div>
+						<div class="bg-red-50 "></div>
+						<div class="bg-red-100 "></div>
+						<div class="bg-red-100 md:block hidden lg:hidden"></div>
+						<div class="bg-red-50 md:block hidden lg:hidden"></div>
+						<div class="bg-red-100 md:block hidden lg:hidden"></div>
+						<div class="bg-red-50 md:block hidden lg:hidden"></div>
 
 
-					</div>
+					</div> -->
 				</div>
 	
 				<div class="text-center p-1 absolute z-20 mx-auto my-auto self-start content-center grid md:w-screen">
 					<div class="m-4 p-0 grid text-center md:mt-6 md:p-6 rounded-md  max-w-screen-md justify-center items-center mx-auto">
-						<div class="text-4xl text-gray-900  font-pro "> Reinvent the <span class="bg-clip-text bg-gradient-to-l from-cyan-600 to-blue-600 text-transparent font-bold">Invented</span></div> 
+						<div class="text-4xl text-gray-100  font-pro "> Reinvent the <span class="bg-clip-text bg-gradient-to-l from-cyan-600 to-blue-600 text-transparent font-bold">Invented</span></div> 
 						<div> <div class="animate-charcter font-bold opacity-100 font-pro ">YUME</div> </div>
-						<div class="text-gray-900 text-2xl font-bold capitalize">There are no Limits to tell a Story...<br>
-							<span class="text-xl text-gray-900 font-light">A place where you can write your thoughts and then see it drawn...</span>
+						<div class="text-gray-100 text-2xl font-bold capitalize">There are no Limits to tell a Story...<br>
+							<span class="text-xl text-gray-200 font-light">A place where you can write your thoughts and then see it drawn...</span>
 						</div>
-						<div class="flex flex-col w-96 items-center md:flex-row justify-center mx-auto text-center">
+						<div class="flex mb-9 flex-col w-96 items-center md:flex-row justify-center mx-auto text-center">
 							<a type="" href="/signup"  class="md:w-1/3 mt-5 mx-auto text-white bg-gradient-to-r from-blue-400 via-blue-500 to-cyan-600 hover:bg-gradient-to-br focus:ring-4 focus:ring-cyan-300 dark:focus:ring-cyan-800 shadow-md shadow-cyan-500/50 dark:shadow-md dark:shadow-cyan-800/80 font-medium rounded-lg text-sm px-3  py-2.5 text-center mb-2">Be a Creator</a>
 							<a type="" href="/signup" class="md:w-1/3 mt-5 mx-auto text-white bg-gradient-to-r from-blue-400 via-blue-500 to-cyan-600 hover:bg-gradient-to-br focus:ring-4 focus:ring-cyan-300 dark:focus:ring-cyan-800 shadow-md shadow-cyan-500/50 dark:shadow-md dark:shadow-cyan-800/80 font-medium rounded-lg text-sm  px-3  py-2.5 text-center mb-2">Reader</a>
 						</div>
@@ -162,11 +162,64 @@
 								<div class="aspect-square bg-black col-start-4"></div>
 								<div class="aspect-square bg-black col-start-5"></div>
 							</div> -->
+							<div class="scroll mt-4">
+								<a href="yourlink">
+									<div class="mouse">
+										<div class="wheel"></div>
+									</div>
+								</a>
+							</div>
 	
 						</div>
 					</div>
 				</div>
 		</section>
+		<style>
+			.scroll{
+    width: 30px;
+    height: 50px;
+    position: absolute;
+    bottom: 0%;
+    left: 50%;
+    cursor: pointer;
+    margin-top: 20px;
+    margin-left: -15px;
+}
+.scroll .mouse{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: block;
+    border: 2px solid white;
+    border-radius: 20px;
+}
+.scroll .wheel{
+    width: 4px;
+    height: 4px;
+    top: 10px;
+    left: 50%;
+    position: absolute;
+    background:white;
+    display: block;
+    border-radius: 50%;
+    margin-left: -2px;
+    animation-name: scroll-wheel;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+}
+@keyframes scroll-wheel{
+    from{
+        transform: translate3d(0, 0, 0);
+        opacity: 1;
+    }
+    to{
+        transform: translate3d(0, 10px, 0);
+        opacity: 0;
+    }
+}
+		</style>
 
 		</div>
 <!-- 
