done with preview for series page

--- a/html/account.html
+++ b/html/account.html
@@ -501,7 +501,7 @@
                                   <label for="files" class="relative cursor-pointer flex">
                                     <p class="text-xs text-gray-100">Change Cover Photo</p> 
                                     <div class="ml-2 text-gray-100">
-                                      <img src="https://tuk-cdn.s3.amazonaws.com/can-uploader/simple_form-svg1.svg" alt="Edit">
+                                      <img id="banner" src="https://tuk-cdn.s3.amazonaws.com/can-uploader/simple_form-svg1.svg" alt="Edit">
                                   </div>
                                     <input required id="files" name="files[]" type="file" accept=".jpg" class="sr-only">
                                   </label>
@@ -516,7 +516,7 @@
                                         <div class="ml-2 text-gray-100">
                                           <img src="https://tuk-cdn.s3.amazonaws.com/can-uploader/simple_form-svg1.svg" alt="Edit">
                                         </div>
-                                        <input required id="files" name="files[]" type="file" accept=".jpg" class="sr-only">
+                                        <input required id="pfpImage" name="files[]" type="file" accept=".jpg" class="sr-only">
                                       </label>
                                     </div>
                                 </div>
