fixed padding of logo

--- a/html/home.html
+++ b/html/home.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <nav class="bg-white">
-    <div class="max-w-7xl mx-auto px-2 sm:px-6 lg:px-8">
+    <div class="max-w-7xl mx-auto px-2 sm:px-0 lg:px-8">
       <div class="relative flex items-center justify-between h-16">
         <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
           <!-- Mobile menu button-->
@@ -41,7 +41,7 @@
         </div>
         <div class="flex-1 flex items-center justify-center sm:items-stretch sm:justify-start">
           <div class="flex-shrink-0 flex items-center">
-            <p class="block lg:block h-8 w-auto text-3xl font-bold font-poppins" >YUME.</p>
+            <p class="block lg:block h-8 w-auto text-3xl font-bold font-poppins md:mr-10" >YUME.</p>
             <img class="block lg:hidden h-8 w-auto" src="" alt="">
             <img class="hidden lg:block h-8 w-auto" src="" alt="">
           </div>
@@ -55,9 +55,10 @@
               <a href="#" class="text-gray-900 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-xl font-medium">Projects</a>
   
               <a href="#" class="text-gray-900 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-xl font-medium">Calendar</a>
+              
             </div>
           </div>
-          <div class="relative mx-auto text-gray-600 md:block hidden">
+          <div class="relative mx-auto text-gray-600 md:block hidden ">
                
             <input
                 class="border-2 border-gray-300 bg-white h-10 rounded-lg text-sm focus:outline-none"
