--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -706,6 +706,12 @@
                             </svg>
                         </div>
                     </div>
+                    <div class="flex mr-6 pr-4 items-center justify-center mt-5 mb-3 gap-2 flex-row ">
+                      <div>
+                        <button type="button" class=" px-2 py-1 border-2 border-green-500 text-green-500 font-medium text-xs leading-tight uppercase rounded-md  hover:bg-black hover:bg-opacity-5 focus:outline-none focus:ring-0 transition duration-150 ease-in-out">accept</button>
+                        <button type="button" class="md:ml-4 px-2 py-1 border-2 border-red-600 text-red-600 font-medium text-xs leading-tight uppercase     rounded-md  hover:bg-black hover:bg-opacity-5 focus:outline-none focus:ring-0 transition duration-150 ease-in-out">reject</button>
+                      </div>
+                    </div>
                     <p tabindex="0" class="focus:outline-none text-xs leading-3 pt-1 text-gray-500">2 hours ago</p>
                 </div>
             </div>
@@ -745,7 +751,7 @@
                     <p tabindex="0" class="focus:outline-none text-xs leading-3 pt-1 text-gray-500">2 hours ago</p>
                 </div>
             </div>
-            <h2 tabindex="0" class="focus:outline-none text-sm leading-normal pt-8 border-b pb-2 border-gray-300 text-gray-600">YESTERDAY</h2>
+            <!-- <h2 tabindex="0" class="focus:outline-none text-sm leading-normal pt-8 border-b pb-2 border-gray-300 text-gray-600">YESTERDAY</h2> -->
             <!-- <div class="w-full p-3 mt-6 bg-white rounded flex">
                 <div tabindex="0" aria-label="post icon" role="img" class="focus:outline-none w-8 h-8 border rounded-full border-gray-200 flex items-center justify-center">
                     <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -795,11 +801,12 @@
                     </div>
                 </div>
             </div>
-            <div class="flex items-center justiyf-between">
-                <hr class="w-full">
-                <p tabindex="0" class="focus:outline-none text-sm flex flex-shrink-0 leading-normal px-3 py-16 text-gray-500">Thats it for now :)</p>
-                <hr class="w-full">
-            </div> -->
+             -->
+             <div class="flex items-center justiyf-between">
+              <hr class="w-full">
+              <p tabindex="0" class="focus:outline-none text-sm flex flex-shrink-0 leading-normal px-3 py-16 text-gray-500">Thats it for now :)</p>
+              <hr class="w-full">
+          </div>
         </div>
     </div>
 </div>
